API from NodeJS to Python Flask
