# API/openapi_server/models/__init__.py
@@ -1,0 +1,7 @@
+# coding: utf-8
+
+# flake8: noqa
+from __future__ import absolute_import
+# import models into model package
+from openapi_server.models.device_mac import DeviceMAC
+from openapi_server.models.inline_object import InlineObject
